--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,10 @@ services:
     volumes:
       - ./onetjs_volume/data:/onetjs/data
       - ./onetjs_volume/log:/onetjs/log
+    depends_on:
+    - mysql
+
+  mysql:
+    image: mariadb
+    environment:
+        MYSQL_ROOT_PASSWORD: example
